--- a/datareset.html
+++ b/datareset.html
@@ -4,4 +4,47 @@
     window.panelbear = window.panelbear || function() { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
     panelbear('config', { site: 'CqQGH3acHo3' });
 </script>
+
+<script>
+//DisableSelect (start)
+document.addEventListener('contextmenu', function (e) {
+    e.preventDefault();
+});
+//end
+
+// DisableKeys (start)
+document.onkeydown = function (e) {
+    if (event.keyCode == 123) {
+        return false;
+    }
+    if (event.keyCode == 224) {
+        return false;
+    }
+    if (event.keyCode == 17) {
+        return false;
+    }
+    if (event.keyCode == 91) {
+        return false;
+    }
+    if (event.keyCode == 93) {
+        return false;
+    }
+    if (e.ctrlKey && e.shiftKey && e.keyCode == 'I'.charCodeAt(0)) {
+        return false;
+    }
+    if (e.ctrlKey && e.shiftKey && e.keyCode == 'C'.charCodeAt(0)) {
+        return false;
+    }
+    if (e.ctrlKey && e.shiftKey && e.keyCode == 'J'.charCodeAt(0)) {
+        return false;
+    }
+    if (e.ctrlKey && e.keyCode == 'U'.charCodeAt(0)) {
+        return false;
+    }
+    if (e.ctrlKey && e.keyCode == 'S'.charCodeAt(0)) {
+        return false;
+    }
+    
+}
+</script>
 </head><body id="page-top"><div id="wrapper"><nav class="navbar navbar-dark align-items-start sidebar sidebar-dark accordion bg-gradient-primary p-0" style="background: #4D6981;"><div class="container d-flex flex-column p-0"><a class="navbar-brand d-flex justify-content-center align-items-center sidebar-brand m-0" href="index.html"><div class="sidebar-brand-icon rotate-n-15"><i class="fas fa-chart-pie"></i></div><div class="sidebar-brand-text mx-3"><span>BCS Analytics</span></div></a><hr class="sidebar-divider my-0"><ul class="navbar-nav text-light" id="accordionSidebar"><li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home"></i><span>Home</span></a></li></ul><div class="text-center d-none d-md-inline"><button class="btn rounded-circle border-0" id="sidebarToggle" type="button"></button></div></div></nav><div class="d-flex flex-column" id="content-wrapper"><div id="content"><nav class="navbar navbar-light navbar-expand bg-white shadow mb-4 topbar static-top"><div class="container-fluid"><button class="btn btn-link d-md-none rounded-circle me-3" id="sidebarToggleTop" type="button"><i class="fas fa-bars"></i></button><ul class="navbar-nav flex-nowrap ms-auto"><li class="nav-item dropdown no-arrow mx-1"><div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="badge bg-danger badge-counter">1</span><i class="fas fa-bell fa-fw"></i></a><div class="dropdown-menu dropdown-menu-end dropdown-list animated--grow-in"><h6 class="dropdown-header" style="background: #4D6981;">alerts center</h6><a class="dropdown-item d-flex align-items-center" href="#"><div class="me-3"><div class="bg-primary icon-circle" style="background: #00DFD1;color: #00DFD1;"><i class="material-icons text-white">fiber_new</i></div></div><div><span class="small text-gray-500">June 2, 2021</span><p>Welcome to the new BCS Analytics dashboard!</p></div></a></div></div></li><li class="nav-item dropdown no-arrow mx-1"><div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><i class="fas fa-calendar-day fa-fw"></i></a><div class="dropdown-menu dropdown-menu-end dropdown-list animated--grow-in"><h6 class="dropdown-header" style="background: #4D6981;">analytics schedule</h6><a class="dropdown-item d-flex align-items-center" href="#"><div class="fw-bold"><div class="text-truncate"><span>Analytics stats updates</span></div><p class="small text-gray-500 mb-0">Every Monday</p></div></a><a class="dropdown-item text-center small text-gray-500" href="#">Show All Events</a></div></div><div class="shadow dropdown-list dropdown-menu dropdown-menu-end" aria-labelledby="alertsDropdown"></div></li><li class="nav-item dropdown no-arrow"><a class="nav-link" href="index.html"><i class="fas fa-home"></i></a></li></ul></div></nav><div class="container-fluid"><section class="contact-clean"><form data-bss-recipient="2904202ec7d643698622e477a6f86b2d" data-bss-subject="Dashboard settings have been changed"><h2 class="text-center">Data Options</h2><div class="mb-3"></div><div class="mb-3"><input class="form-control is-invalid" type="email" name="email" placeholder="Email"><small class="form-text text-danger">Please enter a correct email address.</small></div><select class="form-select"><optgroup label="Reset options"><option value="12">Reset all dashboard data</option><option value="13">Reset BCS Card</option><option value="14">Reset BCS Marketing</option></optgroup></select><div class="mb-3"></div><div class="mb-3"><button class="btn btn-link" type="submit">send </button></div></form></section></div></div><footer class="bg-white sticky-footer"><div class="social-icons"><a href="https://www.instagram.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-instagram" data-bss-hover-animate="rubberBand"></i></a><a href="https://twitter.com/borgcreative" target="_blank"><i class="icon ion-social-twitter" data-bss-hover-animate="rubberBand"></i></a><a href="https://www.facebook.com/borgcreativestudios/" target="_blank"><i class="icon ion-social-facebook" data-bss-hover-animate="rubberBand"></i></a><a href="https://wa.me/message/H75ZMM3UGODAL1" target="_blank"><i class="icon ion-social-whatsapp" data-bss-hover-animate="rubberBand"></i></a><a href="https://github.com/Borg-Creative-Studios" target="_blank"><i class="icon ion-social-github" data-bss-hover-animate="rubberBand"></i></a></div><div class="container my-auto"><div class="text-center my-auto copyright"><span>Copyright © Borg Creative Studios 2021</span></div></div></footer></div><a class="border rounded d-inline scroll-to-top" href="#page-top"><i class="fas fa-angle-up"></i></a></div><script src="assets/bootstrap/js/bootstrap.min.js"></script><script src="assets/js/smart-forms.min.js"></script><script src="assets/js/chart.min.js"></script><script src="assets/js/script.min.js"></script></body></html>
