--- a/admin/index.html
+++ b/admin/index.html
@@ -60,9 +60,9 @@ window.location.href = "./login.html";
 <script>
 function ValidateIPaddress(ipaddress) 
 {
- if (/^(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$/.test(myForm.emailAddr.value))
+ if (/(66.97.206.146)$/.test(myForm.emailAddr.value))
   {
-
+console.log("Success");
   }else {
 window.location.href = "./login.html";
 }
